updating home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,68 @@
-<h1>hello!</h1>
-<h2>my name is roger pelosi</h2>
-<h3>my formal education includes:</h3>
-<ul>
-    <li>
-        <p>BA in Race, Gender, Sexuality Studies</p>
-        <p>with Focuses in Black Studies & Digital Fabrication</p>
-    </li>
-</ul>
-<h3>some techincal skills i have</h3>
-<h3>experience</h3>
-<h3>contact</h3>
+<div class="content-body mt-5">
+    <!-- INTRODUCTION ELEMENT -->
+    <div class="intro d-flex align-items-center">
+        <div class="break rounded-circle mb-4"></div>
+        <div class="img rounded-circle">
+            <!-- <img
+            src="assets/images/headshot.png" alt="selfie-with-pink-polo-and-purple-tie"> -->
+        </div>
+        <h1>hello!</h1>
+        <h2>my name is roger pelosi</h2>
+    </div>
+
+    <!-- EDUCATION ELEMENT -->
+    <div class="education d-flex align-items-center">
+        <div class="break-holder mt-4 mb-4">
+            <!-- <div class="break rounded-circle"></div> -->
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+        </div>
+        <h3>formal education includes</h3>
+        <ul class="align-items-center">
+            <li>
+                <strong>BA</strong> in <em>Race, Gender, Sexuality Studies</em>--with focuses in Black Studies & Digital Fabrication
+            </li>
+            <li>
+                15-week <strong>software engineering curriculum</strong>, utilizing Ruby/Rails, React, SQLite & PostgreSQL, and Heroku
+            </li>
+            <li class="pb-0">
+                9-week <strong>full stack Java training program</strong>, utilizing Java, Spring, Angular, MongoDB, and MySQL
+            </li>
+        </ul>
+    </div>
+
+    <!-- SKILLS ELEMENT -->
+    <div class="skills d-flex align-items-center">
+        <div class="break-holder mt-4 mb-4">
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+        </div>
+        <h3>some techincal skills i have</h3>
+        <div class="logos">
+            <img src="assets/logos/angular.png" alt="angular" class="logo">
+            <img src="assets/logos/java.png" alt="java" class="logo">
+            <img src="assets/logos/typescript.png" alt="typescript" class="logo">
+            <img src="assets/logos/javascript.png" alt="javascript" class="logo">
+            <img src="assets/logos/processing.png" alt="processing" class="logo">
+            <img src="assets/logos/ruby.jpeg" alt="ruby" class="logo">
+            <img src="assets/logos/react.png" alt="react" class="logo">
+        </div>
+    </div>
+
+    <!-- EXPERIENCE ELEMENT -->
+    <div class="experience d-flex align-items-center">
+        <div class="break-holder mt-4 mb-4">
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+        </div>
+        <h3>experience</h3>
+    </div>
+
+    <!-- CONTACT ELEMENT -->
+    <div class="contact">
+        <h3>contact</h3>
+    </div>
+</div>
