--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,7 @@
-<section id="navigation-container" class="row w-50 mx-auto mt-4 rounded-pill row align-items-center">
+<section id="navigation-container" class="row w-50 mx-auto mt-4 rounded-pill row align-items-center shadow">
+    <!-- <div id="skills-link" class="col col-sm- rounded-pill" [routerLink]="['skills']">
+        <a [routerLink]="['skills']">skills</a>
+    </div> -->
     <a id="home-link" class="col col-6 col-sm-6 col-md-4 col-lg-2" 
     [routerLink]="['home']" routerLinkActive="active">
         home</a>
