--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -8,7 +8,7 @@
 }
 
 .row{
-    background-color: rgba(128, 128, 128, 0.196);
+    background-color: rgba(128, 128, 128, 0.105);
     padding: 1vw 0vw;
 }
 
@@ -28,6 +28,7 @@
 .active{
     color: aliceblue;
     animation:Border 15s infinite alternate;
+    text-shadow: 4px 4px 5px rgb(102, 115, 119);
 }
 
 a{
