home page almost complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,23 @@
-<div class="content-body mt-5">
+<div class="content-body mt-5 align-items-center">
     <!-- INTRODUCTION ELEMENT -->
     <div class="intro d-flex align-items-center">
         <div class="break rounded-circle mb-4"></div>
-        <div class="img rounded-circle">
-            <!-- <img
-            src="assets/images/headshot.png" alt="selfie-with-pink-polo-and-purple-tie"> -->
-        </div>
+        <div class="img rounded-circle"></div>
         <h1>hello!</h1>
         <h2>my name is roger pelosi</h2>
+        <section class="documents">
+            <a href="https://www.dropbox.com/s/s5w6legfwg12ao2/RPelosi%20TR%202022.pdf?dl=0">tech resume</a>
+        </section>
     </div>
 
     <!-- EDUCATION ELEMENT -->
     <div class="education d-flex align-items-center">
         <div class="break-holder mt-4 mb-4">
-            <!-- <div class="break rounded-circle"></div> -->
             <div class="break rounded-circle"></div>
             <div class="break rounded-circle"></div>
         </div>
         <h3>formal education includes</h3>
-        <ul class="align-items-center">
+        <ul>
             <li>
                 <strong>BA</strong> in <em>Race, Gender, Sexuality Studies</em>--with focuses in Black Studies & Digital Fabrication
             </li>
@@ -40,13 +39,13 @@
         </div>
         <h3>some techincal skills i have</h3>
         <div class="logos">
-            <img src="assets/logos/angular.png" alt="angular" class="logo">
-            <img src="assets/logos/java.png" alt="java" class="logo">
-            <img src="assets/logos/typescript.png" alt="typescript" class="logo">
-            <img src="assets/logos/javascript.png" alt="javascript" class="logo">
-            <img src="assets/logos/processing.png" alt="processing" class="logo">
-            <img src="assets/logos/ruby.jpeg" alt="ruby" class="logo">
-            <img src="assets/logos/react.png" alt="react" class="logo">
+            <img src="assets/logos/angular.png" alt="angular" class="logo" title="angular">
+            <img src="assets/logos/java.png" alt="java" class="logo" title="java">
+            <img src="assets/logos/typescript.png" alt="typescript" class="logo" title="typescript">
+            <img src="assets/logos/javascript.png" alt="javascript" class="logo" title="javascript">
+            <img src="assets/logos/processing.png" alt="processing" class="logo" title="processing">
+            <img src="assets/logos/react.png" alt="react" class="logo" title="react">
+            <img src="assets/logos/ruby.jpeg" alt="ruby" class="logo" title="ruby">
         </div>
     </div>
 
@@ -56,13 +55,30 @@
             <div class="break rounded-circle"></div>
             <div class="break rounded-circle"></div>
             <div class="break rounded-circle"></div>
-            <div class="break rounded-circle"></div>
         </div>
         <h3>experience</h3>
+        <p class="pb-0 mb-0">i've worked with CGI for 5 months, and was at my university library for 3 years! interned with <a href="https://www.selux.us/usa/en/start" target=”_blank”>Selux</a> (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-yes, with two intentional f's. i have 6 years of customer service experience across grocery, food, and retail industries, along with some door-to-door canvassing</p>
     </div>
 
     <!-- CONTACT ELEMENT -->
-    <div class="contact">
+    <div class="contact d-flex align-items-center">
+        <div class="break-holder mt-4 mb-4">
+            <div class="break rounded-circle"></div>
+            <div class="break rounded-circle"></div>
+        </div>
         <h3>contact</h3>
+        <p class="m-0">e: <a href = "mailto: mattrogerpelosi@gmail.com">mattrogerpelosi@gmail.com</a></p>
+        <p class="m-0">m: <a href="tel:5185380399">518.538.0399</a></p>
+        <p class="m-0">est | new york</p>
+        <div class="break-holder mt-4 mb-3">
+            <div class="break rounded-circle"></div>
+        </div>
+    </div>
+    <div class="contact-info w-75 shadow rounded-pill mt-2 mb-5 d-flex justify-content-around">
+        <a href="mailto: mattrogerpelosi@gmail.com"><img src="assets/logos/email.png" alt="email" title="mailto" class="social"></a>
+        <a href="https://medium.com/@ro.io" target="_blank"><img src="assets/logos/medium.png" alt="medium" title="medium" class="social"></a>
+        <a href="https://github.com/rogerpelosi" target="_blank"><img src="assets/logos/github.png" alt="github" title="github" class="social"></a>
+        <a href="https://www.linkedin.com/in/rogerpelosi/" target="_blank"><img src="assets/logos/linkedin.webp" alt="linkedin" title="linkedin" class="social"></a>
+        <a href="tel:5185380399"><img src="assets/logos/phone.png" alt="phone" title="call" class="social"></a>
     </div>
 </div>
