--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
 }
 
-.intro, .education, .skills, .experience{
+.intro, .education, .skills, .experience, .contact{
     display: flex;
     flex-direction: column;
 }
@@ -30,13 +30,27 @@
 ul{
     display: flex;
     flex-direction: column;
-    text-align: justify;
-    list-style: none;
-    margin-bottom: none;
+    text-align: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 li{
     padding: 1vw;
+    margin-left: 0;
+
+}
+
+@media only screen and (max-width: 600px) {
+    ul{
+        text-align: justify;
+    }
+}
+
+p{
+    text-align: justify;
+    padding: .5vw;
 }
 
 .logos{
@@ -48,4 +62,23 @@ li{
     width: 10vw;
     height: 10vw;
     padding: 1vw;
+}
+
+.social{
+    width: 6vw;
+    height: 6vw;
+    padding: 1vw;
+}
+
+.contact-info{
+    background-color: rgba(128, 128, 128, 0.105);
+    height: 10vw;
+    align-items: center;
+}
+
+.contact-info a:hover{
+    /* position: relative;
+    top: -25px; */
+    filter: invert(60%);
+    -webkit-filter: invert(60%);
 }
