adding tech pdfs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,9 @@
         <h1>hello!</h1>
         <h2>my name is roger pelosi</h2>
         <section class="documents">
-            <a href="https://www.dropbox.com/s/s5w6legfwg12ao2/RPelosi%20TR%202022.pdf?dl=0">tech resume</a>
+            <a href="assets/docs/rp.TR.pdf" class="p-1" target=”_blank”>tech resume</a>
+            <a href="assets/docs/rp.CV.pdf" class="p-1" target=”_blank”>cv</a>
+            <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a>
         </section>
     </div>
 
@@ -25,7 +27,7 @@
                 15-week <strong>software engineering curriculum</strong>, utilizing Ruby/Rails, React, SQLite & PostgreSQL, and Heroku
             </li>
             <li class="pb-0">
-                9-week <strong>full stack Java training program</strong>, utilizing Java, Spring, Angular, MongoDB, and MySQL
+                9-week <strong>full stack training program</strong>, utilizing Java, Spring, Angular, MongoDB, and MySQL
             </li>
         </ul>
     </div>
