adding wip pages, finishing home landing

--- a/src/app/hands/hands.component.html
+++ b/src/app/hands/hands.component.html
@@ -1,1 +1,4 @@
-<p>hands works!</p>
+<section class="content-body mx-auto align-items-center mt-4">
+    <h1 class="">wip</h1>
+    <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
+</section>
