--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,18 @@
 <div class="content-body mt-5 align-items-center">
+
+    <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
+
     <!-- INTRODUCTION ELEMENT -->
     <div class="intro d-flex align-items-center">
         <div class="break rounded-circle mb-4"></div>
         <div class="img rounded-circle"></div>
-        <h1>hello!</h1>
-        <h2>my name is roger pelosi</h2>
-        <section class="documents">
+        <h1 class="display-2 mt-1 mb-0">hello!</h1>
+        <h2 class="display-5 mb-1">my name is roger,</h2>
+        <h3 class="fw-light">a bit about me</h3>
+        <section class="documents align-items-center">
+            <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a>
             <a href="assets/docs/rp.TR.pdf" class="p-1" target=”_blank”>tech resume</a>
             <a href="assets/docs/rp.CV.pdf" class="p-1" target=”_blank”>cv</a>
-            <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a>
         </section>
     </div>
 
@@ -59,7 +63,7 @@
             <div class="break rounded-circle"></div>
         </div>
         <h3>experience</h3>
-        <p class="pb-0 mb-0">i've worked with CGI for 5 months, and was at my university library for 3 years! interned with <a href="https://www.selux.us/usa/en/start" target=”_blank”>Selux</a> (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-yes, with two intentional f's. i have 6 years of customer service experience across grocery, food, and retail industries, along with some door-to-door canvassing</p>
+        <p class="pb-0 mb-0">i've worked with CGI for 5 months, and was at my university library for 3 years! interned with Selux (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-with two intentional f's. i have 6 years of customer service experience across varying industries, including grocery, food, and retail, along with some door-to-door canvassing</p>
     </div>
 
     <!-- CONTACT ELEMENT -->
@@ -76,11 +80,12 @@
             <div class="break rounded-circle"></div>
         </div>
     </div>
-    <div class="contact-info w-75 shadow rounded-pill mt-2 mb-5 d-flex justify-content-around">
+    
+    <!-- <div class="contact-info w-75 shadow rounded-pill mt-2 mb-5 d-flex justify-content-around">
         <a href="mailto: mattrogerpelosi@gmail.com"><img src="assets/logos/email.png" alt="email" title="mailto" class="social"></a>
         <a href="https://medium.com/@ro.io" target="_blank"><img src="assets/logos/medium.png" alt="medium" title="medium" class="social"></a>
         <a href="https://github.com/rogerpelosi" target="_blank"><img src="assets/logos/github.png" alt="github" title="github" class="social"></a>
         <a href="https://www.linkedin.com/in/rogerpelosi/" target="_blank"><img src="assets/logos/linkedin.webp" alt="linkedin" title="linkedin" class="social"></a>
         <a href="tel:5185380399"><img src="assets/logos/phone.png" alt="phone" title="call" class="social"></a>
-    </div>
+    </div> -->
 </div>
