--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,17 +1,8 @@
-<section id="navigation-container" class="row w-50 mx-auto mt-4 rounded-pill row align-items-center shadow">
-    <!-- <div id="skills-link" class="col col-sm- rounded-pill" [routerLink]="['skills']">
-        <a [routerLink]="['skills']">skills</a>
-    </div> -->
-    <a id="home-link" class="col col-6 col-sm-6 col-md-4 col-lg-2" 
-    [routerLink]="['home']" routerLinkActive="active">
-        home</a>
-    <a id="pen-link" class="col col-6 col-sm-6 col-md-4 col-lg-2" 
-    [routerLink]="['pen']" routerLinkActive="active">
-        pen</a>
-    <a id="hands-link" class="col col-6 col-sm-6 col-md-4 col-lg-2" 
-    [routerLink]="['hands']" routerLinkActive="active">
-        hands</a>
-    <a id="keyboard-link" class="col col-6 col-sm-6 col-md-4 col-lg-2" 
-    [routerLink]="['keyboard']" routerLinkActive="active">
-        keyboard</a>
+<section id="navigation-container" class="row w-50 mx-auto mt-4 rounded-circle row align-items-center shadow">
+
+    <a id="home-link" class="col col-12" [routerLink]="['home']" routerLinkActive="active">home</a>
+    <a id="pen-link" class="col col-12" [routerLink]="['pen']" routerLinkActive="active">pen</a>
+    <a id="hands-link" class="col col-12" [routerLink]="['hands']" routerLinkActive="active">hands</a>
+    <a id="keyboard-link" class="col col-12" [routerLink]="['keyboard']" routerLinkActive="active">keyboard</a>
+
 </section>
