--- a/src/app/pen/pen.component.css
+++ b/src/app/pen/pen.component.css
@@ -1,10 +1,71 @@
 .content-body{
     display: flex;
     flex-direction: column;
-    font-family: 'DotGothic16', sans-serif;
+    /* font-family: 'DotGothic16', sans-serif; */
 }
 
-#smiley{
-    width: 30vw;
-    height: 30vw;
+#penned-circle{
+    width: 10vw;
+    height: 10vw;
+    opacity: .65;
+}
+
+.break-holder{
+    display: flex;
+    flex-direction: row;
+}
+
+.break{
+    background-color: rgb(205, 216, 225);
+    width: 2vw;
+    height: 2vw;
+    margin: 3px;
+}
+
+.specific-texts a{
+    color: rgb(84, 162, 211);
+    text-decoration: underline 0.15em rgba(0, 0, 0, 0);
+    transition: text-decoration-color 300ms;
+}
+
+.specific-texts a:hover{
+    text-decoration-color: rgb(84, 162, 211);
+}
+
+a{
+    text-decoration: none;
+}
+
+p{
+    text-align: justify;
+}
+
+#blog{
+    color:rgb(121, 121, 121);
+}
+
+#obj-1{
+    width: 15vw;
+    height: 15vw;
+    background-color: lightblue;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    animation: pulse 0.8s ease-out alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+    0% {transform: scale(0.75, 0.75);}
+    30% {transform: scale(1, 1);}
+}
+
+@media only screen and (max-width: 600px) {
+    #obj-1{
+        width: 35vw;
+        height: 35vw;
+    }
 }
