--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -1,4 +1,8 @@
 <section class="content-body mx-auto align-items-center mt-4">
+<!-- 
+    <img id="computer" class="mt-4 mb-4" 
+    src="assets/computer.gif" alt="computer" title="computer"> -->
+
     <h1 class="">wip</h1>
     <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
 </section>
