--- a/src/app/pen/pen.component.html
+++ b/src/app/pen/pen.component.html
@@ -5,9 +5,9 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead bg-color-primary text-center">here lies some of my written work! i am exploring all that it is to write, the meaning and power words do hold, and the un/intentional erasure carried out by these vessels. the matter of responsible creation must be attended to.</p>
+    <p class="lead bg-color-primary text-center">here lies some of my written work! i am exploring all that it is to write, the meaning and power words do hold, and the un/intentional erasure carried out by these vessels. responsible creation is something i aspire to contend with.</p>
 
-    <p class="lead bg-color-primary text-center">currently, i am learning more about dramaturgy, and have outlined several plays to further flesh out myself-Caryl Churchill's work is a big inspiration to me, lots left to learn.</p>
+    <p class="lead bg-color-primary text-center">currently, i am learning more about dramaturgy, and have outlined several plays to further flesh out-Caryl Churchill, Josefina Báez, Lester Mayers, and Duncan Macmillan have inspired me thus far, lots still yet to learn!</p>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
@@ -15,8 +15,8 @@
     </div>
 
     <div class="specific-texts mb-3">
-        <p><a href="https://www.dropbox.com/s/vuye81h1tyupjmi/Biology_Ideology.docx.pdf?dl=0" target="_blank">biology, ideology, and a closer look at mental turbulence: </a>if french thinker Claude Destutt de Tracy thought of ideology as emerging from one’s material environment, this exploration seeks to understand the ways in which new material biologies are birthed from ideological streams themselves.</p>
-        <p><a href="https://www.dropbox.com/s/u0zdmbxkz531dig/research-narrative.pdf?dl=0" target="_blank">narrative as research: </a>call-to-action that demands transparent research and subsequent uses, an expanded scope of what constitutes a "reputable source," and in-depth look into what personal failure and scrappiness allow across personal and "professional" realms of existence.</p>
+        <p><a href="https://www.dropbox.com/s/vuye81h1tyupjmi/Biology_Ideology.docx.pdf?dl=0" target="_blank">biology, ideology, and a closer look at mental turbulence: </a>if french thinker Claude Destutt de Tracy thought of ideology as emerging from one’s material environment, this exploration seeks to understand the ways in which new material biologies are birthed from ideological streams themselves</p>
+        <p><a href="https://www.dropbox.com/s/u0zdmbxkz531dig/research-narrative.pdf?dl=0" target="_blank">narrative as research: </a>call-to-action that demands transparent research and subsequent uses, an expanded scope of what constitutes a "reputable source," and in-depth look into what personal failure and scrappiness allow across personal and "professional" realms of existence</p>
     </div>
 
     <div class="break-holder mb-4">
