--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -1,7 +1,19 @@
 <section class="content-body mx-auto align-items-center mt-4">
 <!-- 
-    <img id="computer" class="mt-4 mb-4" 
-    src="assets/computer.gif" alt="computer" title="computer"> -->
+    <img id="computer" class="mt-4 mb-4 rounded-circle" 
+    src="assets/lala.png" alt="computer" title="computer"> -->
+
+    <a href="https://youtu.be/Tek0YZRpLg8" target="_blank" title="bunease-app-login" class="apps mb-5"><img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow rounded"></a>
+
+    <a href="" class="apps mb-5"><img src="assets/images/jean-station.png" alt="jean-station-app-login" class="w-75 shadow"></a>
+
+    <a href="" class="apps mb-5"><img src="assets/images/recycled-reads.png" alt="recycled-reads-app-login" class="w-75 shadow"></a>
+
+    <!-- <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow">
+
+    <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow">
+
+    <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow"> -->
 
     <h1 class="">wip</h1>
     <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
