--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -3,18 +3,46 @@
     <img id="computer" class="mt-4 mb-4 rounded-circle" 
     src="assets/lala.png" alt="computer" title="computer"> -->
 
-    <a href="https://youtu.be/Tek0YZRpLg8" target="_blank" title="bunease-app-login" class="apps mb-5"><img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow rounded"></a>
+    <div class="break rounded-circle mb-4"></div>
 
-    <a href="" class="apps mb-5"><img src="assets/images/jean-station.png" alt="jean-station-app-login" class="w-75 shadow"></a>
+    <p class="lead">keyboard is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing. (wip)</p>
 
-    <a href="" class="apps mb-5"><img src="assets/images/recycled-reads.png" alt="recycled-reads-app-login" class="w-75 shadow"></a>
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
 
-    <!-- <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow">
+    <div class="wep-apps align-items-center">
 
-    <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow">
+        <h3 class="mb-4">web-apps</h3>
 
-    <img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow"> -->
+        <label for="bunease">bunease (solo)</label>
+        <a id="bunease" href="https://youtu.be/Tek0YZRpLg8" target="_blank" title="bunease-app-login" class="apps mb-5"><img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow rounded"></a>
 
-    <h1 class="">wip</h1>
-    <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
+        <label for="jean-station">jean station (co-app)</label>
+        <a id="jean-station" href="https://youtu.be/MjzGi2SxHlc" class="apps mb-5" target="_blank" title="jean-station-app-login"><img src="assets/images/jean-station.png" alt="jean-station-app-login" class="w-75 shadow"></a>
+    
+        <label for="recycled-reads">recycled reads (co-app)</label>
+        <a id="recycled-reads" href="https://youtu.be/vE-NnDFHuIQ" class="apps mb-4" target="_blank" title="recycled-reads-app-login"><img src="assets/images/recycled-reads.png" alt="recycled-reads-app-login" class="w-75 shadow"></a>
+
+    </div>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <div class="rhino-files">
+
+        <h3 class="mb-4">3 dimensional renders</h3>
+
+        <label for="vase-frame">parametric vase</label>
+        <img id="vase-frame" src="assets/images/vase-frame.png" alt="vase-frame" title="vase-frame">
+        <a id="what" href="https://youtu.be/8ueEmWLi8X8" target="_blank" class="mb-4">what's this?</a>
+
+    </div>
+
+    <div class="break rounded-circle mb-4"></div>
+
 </section>
