--- a/src/app/pen/pen.component.html
+++ b/src/app/pen/pen.component.html
@@ -15,8 +15,8 @@
     </div>
 
     <div class="specific-texts mb-3">
-        <p><a href="https://www.dropbox.com/s/vuye81h1tyupjmi/Biology_Ideology.docx.pdf?dl=0" target="_blank">biology, ideology, and a closer look at mental turbulence: </a>if french thinker Claude Destutt de Tracy thought of ideology as emerging from one’s material environment, this exploration seeks to understand the ways in which new material biologies are birthed from ideological streams themselves</p>
-        <p><a href="https://www.dropbox.com/s/u0zdmbxkz531dig/research-narrative.pdf?dl=0" target="_blank">narrative as research: </a>call-to-action that demands transparent research and subsequent uses, an expanded scope of what constitutes a "reputable source," and in-depth look into what personal failure and scrappiness allow across personal and "professional" realms of existence</p>
+        <p><a href="https://www.dropbox.com/s/vuye81h1tyupjmi/Biology_Ideology.docx.pdf?dl=0" target="_blank">biology, ideology, and a closer look at mental turbulence</a>: if french thinker Claude Destutt de Tracy thought of ideology as emerging from one’s material environment, this exploration seeks to understand the ways in which new material biologies are birthed from ideological streams themselves</p>
+        <p><a href="https://www.dropbox.com/s/u0zdmbxkz531dig/research-narrative.pdf?dl=0" target="_blank">narrative as research</a>: call-to-action that demands transparent research and subsequent uses, an expanded scope of what constitutes a "reputable source," and in-depth look into what personal failure and scrappiness allow across personal and "professional" realms of existence</p>
     </div>
 
     <div class="break-holder mb-4">
