--- a/src/app/hands/hands.component.html
+++ b/src/app/hands/hands.component.html
@@ -1,4 +1,12 @@
 <section class="content-body mx-auto align-items-center mt-4">
-    <h1 class="">wip</h1>
-    <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
+
+    <img id="hands" class="mt-4 mb-4" 
+    src="assets/navs/hands.png" alt="hands" title="hands">
+
+    <div class="break rounded-circle mb-4"></div>
+
+    <h1 class="mb-4">wip</h1>
+
+    <div class="break rounded-circle mb-4"></div>
+
 </section>
