--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,9 +8,10 @@
     flex-direction: column;
 }
 
-#smiley{
+#home{
     width: 10vw;
     height: 10vw;
+    opacity: .75;
 }
 
 .img{
@@ -54,6 +55,16 @@ li{
 
     a{
         text-decoration: none;
+    }
+
+    #home{
+        width:20vw;
+        height:20vw;
+    }
+
+    .img{
+        width: 30vw;
+        height: 30vw;
     }
 }
 
