--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="content-body mt-5 align-items-center">
 
-    <img id="smiley" class="mb-4" src="assets/smiley.png" alt="grey-smiley" title="grey-smiley-face">
+    <img id="home" class="mb-4" src="assets/navs/home.png" alt="grey-smiley" title="grey-smiley-face">
 
     <!-- INTRODUCTION ELEMENT -->
     <div class="intro d-flex align-items-center">
