--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -1,11 +1,11 @@
 <section class="content-body mx-auto align-items-center mt-4">
-<!-- 
-    <img id="computer" class="mt-4 mb-4 rounded-circle" 
-    src="assets/lala.png" alt="computer" title="computer"> -->
+
+    <img id="keyboard" class="mt-4 mb-4" 
+    src="assets/navs/keyboard.png" alt="mouse" title="mouse">
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead">keyboard is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing. (wip)</p>
+    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing. (wip)</p>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
