--- a/src/app/pen/pen.component.html
+++ b/src/app/pen/pen.component.html
@@ -1,7 +1,7 @@
 <section class="content-body mx-auto align-items-center mt-4">
 
-    <img id="penned-circle" class="mt-4 mb-4" 
-    src="assets/penned-circle.png" alt="penned-circle" title="penned-circle">
+    <img id="pen" class="mt-4 mb-4" 
+    src="assets/navs/pen.png" alt="pen-scribble" title="pen-scribble">
 
     <div class="break rounded-circle mb-4"></div>
 
